remote/deployment/k8s-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meta-ui-ingress
  namespace: meta-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 4m
    nginx.org/proxy-connect-timeout: 30s
    nginx.org/proxy-read-timeout: 20s
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.org/redirect-to-https: "True"
    #ingress.kubernetes.io/ssl-redirect: "True"
    nginx.org/server-snippets: |
      add_header X-Frame-Options SAMEORIGIN always;
      add_header X-Content-Type-Options nosniff always;
      add_header Cache-Control "private, max-age=31536000" always;
      add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
      add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval'; script-src-elem 'self' https://ajax.googleapis.com/ https://maxcdn.bootstrapcdn.com/; frame-src 'self' https://*.microsoftonline.com  https://*.okta.com; connect-src https://*.accenture.com https://*.okta.com *.microsoftonline.com *.okta.com 'unsafe-inline' blob:; worker-src https://*.accenture.com 'unsafe-inline' blob:; img-src blob: 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsa [...]
      add_header X-XSS-Protection "1; mode=block" always;
      #more_clear_headers "Server";
      #server_tokens off;
      location = /robots.txt {
        return 200 "User-agent: *\nDisallow: /\n";
      }
      location = / {
        return 200 ;
      } 
      location = /keepalive.htm {
        return 200 "alive" ;
      }

    nginx.org/location-snippets: |
      proxy_hide_header Cache-Control;
      proxy_hide_header Content-Security-Policy;
      proxy_hide_header X-Powered-By;
      proxy_hide_header Server;

spec:
  rules:
    - host: platform-integrity-demo.accenture.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meta-ui-service
                port:
                  number: 80
  tls:
    - hosts:
        - platform-integrity-demo.accenture.com
      secretName: meta-dev-ingress-tls
